# Torch_OpenACC

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  Untitled.ipynb  __init__.py  bind.py  hpccm_image_factory.py  image_factory.py  main.cpp  module_a42.cpp  module_a42.h  sc.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
myLib/: Makefile  __init__.py  execa42  module_a42.cpp  module_a42.h  mylib_wrapper.py
script_test/: bind.py
